# fastapi-tdd-docker

./: .cursorrules  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  LLM_ASSISTANT_GUIDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  dockerfile  dockerfile.prod  pyproject.toml  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
db/init/: 01_create_test_db.sql
docs/: CI-CD.md  DEPLOYMENT.md  PRE-COMMIT-SETUP.md
migrations/: env.py
migrations/versions/: 42c30ae015e7_init.py  8c13d10608f1_fix_datetime_timezone.py  a3f5e0b7c2d1_add_status_field.py
scripts/: validate.sh
src/app/: main.py
src/fastapi_tdd_docker/: __init__.py  config.py  db.py  dependencies.py  logging_config.py  main.py  summarizer.py
src/fastapi_tdd_docker/api/: __init__.py  crud.py  healthcheck.py  ping.py  summaries.py
src/fastapi_tdd_docker/models/: __init__.py  schemas.py  text_summary.py
src/fastapi_tdd_docker/tests/: conftest.py  test_healthcheck.py  test_ping.py  test_summaries.py  test_summarizer.py
tests/: __init__.py  conftest.py  integration_healthcheck.py  integration_ping.py  integration_summaries.py  unit_summarizer.py
