[project]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = "FastAPI project focused on TDD"
readme = "README.md"
authors = [
    { name = "Rodrigo RB", email = "rodrigo.rb.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
]

[project.scripts]
fastapi-tdd-docker = "fastapi_tdd_docker.main:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
