[project]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = "FastAPI project focused on TDD"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Rodrigo RB", email = "rodrigo.rb.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.119.0",
    "gunicorn>=22.0.0",
    "httpx>=0.28.0",  # For async HTTP requests in summarizer
    "openai>=1.59.0",  # For AI-powered summarization
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlmodel>=0.0.27",
    "trafilatura>=2.0.0",  # Modern web scraping (replaces newspaper3k)
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "psycopg2-binary>=2.9.0",  # Sync driver for TestClient
]

[project.scripts]
fastapi-tdd-docker = "fastapi_tdd_docker.main:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["fastapi_tdd_docker"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "*.api.crud"
# SQLModel/SQLAlchemy comparisons are correctly typed but strict mypy has issues
disable_error_code = ["arg-type"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["unit_*.py", "integration_*.py", "test_*.py"]  # Allow unit_*/integration_* pattern
asyncio_mode = "auto"
addopts = "-v --cov=src/fastapi_tdd_docker --cov-report=term-missing --cov-report=html"
markers = [
    "unit: Unit tests (fast, all dependencies mocked, no I/O)",
    "integration: Integration tests (require database, slower)",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
